--- a/css/style.css
+++ b/css/style.css
@@ -54,14 +54,21 @@ body {
 #main #header #nav #logo {
   padding: 0;
   border-radius: 25%;
-  height: 85%;
-  width: 150px;
+  height: 75%;
+  max-height: 200px;
+  width: 100%;
+  max-width: 100px;
   background-image: url("../img/logo.png");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-blend-mode: luminosity;
   animation-fill-mode: forwards;
+}
+@media screen and (max-width: 768px) {
+  #main #header #nav a {
+    display: none;
+  }
 }
 #main #section_one {
   background-image: url("../img/BG.png");
@@ -156,6 +163,16 @@ body {
   width: 75%;
   margin: 5% 0 0 0;
 }
+@media screen and (max-width: 768px) {
+  #main #section_one #about {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #main #section_one #about .card {
+    margin: 0 0 5% 0;
+  }
+}
 #main #section_one #services {
   display: flex;
   height: 100%;
@@ -200,7 +217,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
   padding: 5%;
 }
 #main #section_one #services .col #service-grid .card h3 {
@@ -217,8 +233,34 @@ body {
   text-align: center;
   height: 90%;
 }
+@media screen and (max-width: 768px) {
+  #main #section_one #services {
+    flex-direction: column;
+  }
+  #main #section_one #services .col {
+    margin: 0;
+  }
+  #main #section_one #services .col h1 {
+    font-size: 50px;
+  }
+  #main #section_one #services .col #service-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 10px;
+  }
+}
 #main #section_one #gallery {
   display: none;
+}
+@media screen and (max-width: 768px) {
+  #main #section_one {
+    background-size: 1000%;
+  }
+}
+@media screen and (max-width: 400px) {
+  #main #section_one {
+    background-size: 2000%;
+  }
 }
 #main #contact {
   display: flex;
