--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,16 +71,23 @@ body {
             #logo {
                 padding: 0;
                 border-radius: 25%;
-                height: 85%;
-                width: 150px;
+                height: 75%;
+                max-height: 200px;
+                width: 100%;
+                max-width: 100px;
                 background-image: url("../img/logo.png");
-                background-size: cover;
+                background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-blend-mode: luminosity;
                 animation-fill-mode: forwards;
             }
 
+            @media screen and (max-width: 768px) {
+                a {
+                    display: none;
+                }
+            }
 
         }
     }
@@ -190,6 +197,15 @@ body {
                     margin: 5% 0 0 0;
                 }
             }
+
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .card {
+                margin: 0 0 5% 0;
+            }
+        }
         }
 
         #services {
@@ -239,7 +255,6 @@ body {
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
-                        width: 100%;
                         padding: 5%;
 
                         h3 {
@@ -262,12 +277,37 @@ body {
 
                 }
 
-
+                
+                
             }
+            @media screen and (max-width: 768px) {
+                flex-direction: column;
+                .col {
+                    margin:0;
+                    h1 {
+                        font-size: 50px;
+                    }
+
+                    #service-grid {
+                        grid-template-columns: 1fr;
+                        grid-template-rows: 1fr 1fr 1fr;
+                        grid-gap: 10px;
+                    }
+                }
+                
+            }
+
         }
 
         #gallery {
             display: none;
+        }
+
+        @media screen and (max-width: 768px) {
+            background-size: 1000%;
+        }
+        @media screen and (max-width: 400px) {
+            background-size: 2000%;
         }
     }
 
