--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap");
 *,
 body {
   margin: 0;
@@ -27,6 +28,9 @@ body {
 #main {
   height: 100vh;
   width: 100vw;
+}
+#main h1 {
+  font-family: "Raleway", sans-serif;
 }
 #main #header #nav {
   display: flex;
