--- a/assets/scss/util/_brand.scss
+++ b/assets/scss/util/_brand.scss
@@ -1,79 +1,65 @@
-$primary: #6E36B1;
-$primary-dark: #30174D;
-$secondary: #DB5D2D;
-$white:#EEEBFF;
-$black:#17161C;
+$primary: #6e36b1;
+$primary-dark: #30174d;
+$secondary: #db5d2d;
+$white: #eeebff;
+$black: #17161c;
+
+$info: $primary-dark;
+$light: $white;
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600&display=swap");
+@import url("https://use.typekit.net/wio1jyw.css");
 
 :root {
-    font: 16px/1 "Source Sans Pro", sans-serif;
-    color:$white;
-    text-transform: uppercase;
-    font-style: normal;
+  font: 16px/1 "Source Sans Pro", sans-serif;
+  color: $white;
+  text-transform: uppercase;
+  font-style: normal;
 }
 
-h1, h2, h3, h4, .hero, .hero-light, .xl-text {
-    font-family: Roboto;
-}
-
-.hero {
-    font-size: 6rem;
-    font-weight: 900;
-    line-height: 6.25rem;
-    letter-spacing: -0.24rem;
-}
-
-.hero-light {
-    color: $white;
-
-    /* Hero Light */
-    font-size: 5.625rem;
-    font-weight: 100;
-    line-height: 6.25rem;
-    letter-spacing: -0.225rem;
-    text-transform: uppercase;
-}
-
+h1,
+h2,
+h3,
+h4,
+.hero,
+.hero-light,
 .xl-text {
-    font-size: 12.5rem;
-    font-weight: 800;
-    line-height: 6.25rem;
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
-    /* H1 */
-    font-size: 4rem;
-    font-weight: 900;
-    line-height: normal;
-    letter-spacing: -0.16rem;
+  font-size: 4rem;
+  font-weight: 900;
+  line-height: normal;
+  letter-spacing: -0.16rem;
 }
 
 h2 {
-    /* H2 */
-    font-size: 2.8125rem;
-    font-weight: 900;
-    line-height: normal;
-    letter-spacing: -0.1125rem;
+  font-size: 2.8125rem;
+  font-weight: 900;
+  line-height: normal;
+  letter-spacing: -0.1125rem;
 }
 
 h3 {
-    font-size:2rem;
-    font-weight: 400;
-    line-height:normal;
-    letter-spacing: -0.08rem;
-    text-decoration: underline;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.08rem;
+  text-decoration: underline;
 }
 
 h4 {
-    font-size: 1.375rem;
-    font-weight: 300;
-    line-height: normal;
+  font-size: 1.375rem;
+  font-weight: 300;
+  line-height: normal;
 }
 
 p {
-    font-family: Source Sans Pro;
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.5625rem; /* 156.25% */
-    letter-spacing: -0.04rem;
-    text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.5625rem; /* 156.25% */
+  letter-spacing: -0.04rem;
+  text-transform: uppercase;
 }
